--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 streamlit==1.24.0
 google-generativeai
 python-dotenv
-langchain
-PyPDF2
-chromadb
-pdf2image
-faiss-cpu
-langchain_google_genai
+requests
+tabulate
